# softvector

./: CMakeLists.txt  README.md
softfloat/: CMakeLists.txt
softfloat/source/: f16_classify.c  f32_classify.c  f64_classify.c
softfloat/source/8086/: specialize.h
softfloat/source/8086-SSE/: specialize.h
softfloat/source/include/: softfloat.h
src/: crypto_util.cpp  crypto_util.h  fp_functions.cpp  fp_functions.h  vector_functions.cpp  vector_functions.h  vector_functions.hpp
